--- a/src/components/Layouts/LeftSide/WeatherReport.module.css
+++ b/src/components/Layouts/LeftSide/WeatherReport.module.css
@@ -14,4 +14,20 @@
     justify-content: space-between;
     font-size: 0.9rem;
     color:rgb(102, 102, 102);
+    /* margin:0 !important */
+}
+.weekDays div, .weekDays div div{
+    /* width:50%; */
+    margin:  0 5% 0 0;
+    display: flex;
+    flex-direction:row ;
+    justify-content: space-between;
+}
+.day{
+   
+}
+.day div{
+    /* padding-left: 5rem; */
+     /* width:25% */
+    /* color: rgb(248, 17, 17); */ 
 }
