--- a/src/components/Layouts/LeftSide/LeftSide.module.css
+++ b/src/components/Layouts/LeftSide/LeftSide.module.css
@@ -12,7 +12,20 @@
 .title span{
     font-weight: 700;
 }
+
 .imgContainer {
   display: flex;
+  justify-items: flex-start;
+  align-items: flex-start;
   height: 8rem;
+}
+.image{
+  width:100%;
+  height:120%;
+}
+.image img{
+  width:70%;
+  height:100%;
+  border-radius: 20px;
+  cursor: pointer;
 }
