--- a/src/components/Layouts/RightSide/RightSide.module.css
+++ b/src/components/Layouts/RightSide/RightSide.module.css
@@ -11,10 +11,10 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
-  padding: 1rem 1.5rem 0 1.5rem;
+  padding: 1rem 1.5rem 0.5rem 1.5rem;
 }
 .top {
-  height: 6rem;
+  height: 2rem;
 }
 .detail {
   display: flex;
@@ -29,7 +29,7 @@
   align-items: center;
   justify-content: space-between;
 }
-.topMain img{
+.topMain img {
   display: block;
   width: 25%;
 }
@@ -43,13 +43,14 @@
   display: flex;
   flex-direction: column;
   align-content: center;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 .main h1 {
   font-size: 7rem;
   font-weight: 100;
   margin-bottom: 0;
   align-self: center;
-
 }
 .main h5 {
   margin-top: 0;
@@ -61,7 +62,7 @@
   font-size: 2rem;
   font-weight: 100;
   position: absolute;
-  top: 13rem;
+  top: 9rem;
 }
 .underMain {
   width: 50%;
@@ -70,11 +71,10 @@
   color: rgb(151, 153, 182);
   padding: 1rem;
   font-size: 1rem;
+  padding-bottom: 0;
 }
 .rainChance {
-  height: 15rem;
 }
-.source{
+.source {
   font-size: 0.3rem;
-
 }
