--- a/src/components/Layouts/LeftSide/SearchBox.module.css
+++ b/src/components/Layouts/LeftSide/SearchBox.module.css
@@ -1,6 +1,6 @@
 .input {
   width: 30%;
-  padding: 0.8rem 1.7rem;
+  padding: 0.8vw 1.7vw;
   border: none;
   border-radius: 5px;
   -webkit-box-shadow: 12px -5px 13px -10px rgba(0, 0, 0, 0.43);
