--- a/src/components/Layouts/LeftSide/Images.module.css
+++ b/src/components/Layouts/LeftSide/Images.module.css
@@ -1,16 +1,14 @@
 .imgContainer {
     display: flex;
-    justify-items: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
-    height: 8rem;
-  }
-  .image{
-    width:100%;
-    height:120%;
+    height: 12vw;
+
   }
   .image img{
-    width:70%;
-    height:100%;
+    width:10vw;
+    max-height: 12vw;
     border-radius: 20px;
     cursor: pointer;
+    object-fit:contain;
   }
