--- a/src/components/Layouts/LeftSide/WeatherReport.module.css
+++ b/src/components/Layouts/LeftSide/WeatherReport.module.css
@@ -1,10 +1,12 @@
 .timeDeclation{
-    font-size: 0.94rem;
+    font-size: 1.2vw;
     color:rgb(150, 150, 150);
     padding: 2rem  0 0.5rem 0;
     width:25%;
     display: flex;
     justify-content:space-between;
+    min-height: 100%;
+    /* margin-bottom: 0; */
 }
 .weekDays{
     /* height:18rem; */
@@ -12,13 +14,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-size: 0.9rem;
+    font-size: calc(1vw + 3px );
     color:rgb(83, 83, 83);
     /* margin:0 !important */
 }
 .weekDays div, .weekDays div div{
     /* width:50%; */
-    margin:  0 5% 0 0;
+    margin:  0 0 0 0;
     display: flex;
     flex-direction:row ;
     justify-content: space-between;
