--- a/src/components/Pages/MainPage.module.css
+++ b/src/components/Pages/MainPage.module.css
@@ -1,13 +1,14 @@
-* {
-  margin: 0;
-  padding: 0;
-}
 .container {
-  /* background-color: aqua; */
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   overflow-x: hidden;
   display: grid;
-  grid-template-columns: 3fr 1.5fr;
+  grid-template-columns: 3fr 1fr;
+}
+@media (max-width:425px){
+ .container{
+  display: grid;
+  grid-template-columns: 0 1fr;
+ }
 }
 
