--- a/src/components/Pages/Modal.module.css
+++ b/src/components/Pages/Modal.module.css
@@ -1,19 +1,25 @@
 .container {
-  margin: 12rem 20rem;
-  width: 70%;
-  height: 26vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  font-size: 2rem;
-  background-color: #d3f8f4;
-  padding: 1rem 2rem;
+  font-size: 2vw;
+}
+.container form{
+height: fit-content;
+display: flex;
+flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(163, 160, 156);
+  padding: 2vw 3vw;
 }
 .container button {
-  padding: 1rem 3rem;
-  background-color: #8cc0bb;
+  padding: 1vw 3vw;
+  background-color: #e2f1f0;
   border: none;
   cursor: pointer;
-  margin: 2rem;
+  margin: 2vw;
+  font-size:1vw;
 }
