--- a/src/components/Pages/MainPage.module.css
+++ b/src/components/Pages/MainPage.module.css
@@ -1,14 +1,20 @@
 .container {
   width: 100vw;
-  height: 100vh;
-  overflow-x: hidden;
+  min-height: 100vh;
+  max-height: 100%;
+  overflow-y: hidden;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 3fr 1.5fr;
 }
-@media (max-width:425px){
- .container{
-  display: grid;
-  grid-template-columns: 0 1fr;
- }
+@media (max-width: 946px) {
+  .container {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+  }
 }
-
+@media (max-width: 425px) {
+  .container {
+    display: grid;
+    grid-template-columns: 0 1fr;
+  }
+}
