--- a/src/components/Pages/MainPage.module.css
+++ b/src/components/Pages/MainPage.module.css
@@ -3,10 +3,10 @@
   min-height: 100vh;
   max-height: 100%;
   overflow-y: hidden;
-  display: grid;
-  grid-template-columns: 3fr 1.5fr;
+  display: flex;
+ 
 }
-@media (max-width: 946px) {
+/* @media (max-width: 946px) {
   .container {
     display: grid;
     grid-template-columns: 4fr 1fr;
@@ -17,4 +17,4 @@
     display: grid;
     grid-template-columns: 0 1fr;
   }
-}
+} */
