--- a/src/components/Layouts/RightSide/RightSide.module.css
+++ b/src/components/Layouts/RightSide/RightSide.module.css
@@ -66,6 +66,8 @@
   height: 9rem;
 }
 .hero-top-underline {
+  display: flex;
+  gap: 0.4rem;
   padding-bottom: 0.4rem;
   border-bottom: 0.01rem rgba(131, 131, 131, 0.772) solid;
   color: rgba(193, 193, 193, 0.478);
@@ -277,6 +279,16 @@
   }
 }
 @media (max-width: 896px) {
+  .container {
+    max-width: 100vw;
+  }
+  .topbar {
+    width: 95%;
+  }
+  .summary {
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+  }
   .hero {
     grid-template-columns: 11rem 11rem;
     grid-template-rows: auto;
@@ -315,4 +327,30 @@
 }
 .weathericonimg {
   width: 50px;
+}
+
+.link {
+  align-items: center;
+  gap: 0.2rem;
+  text-decoration: none;
+  color: rgb(21, 165, 255);
+}
+.link:hover {
+  color: rgb(19, 122, 186);
+}
+.aboutme {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-size: 1.1rem;
+}
+.usericon {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  font-weight: 500;
 }
