--- a/src/components/Layouts/RightSide/RightSide.module.css
+++ b/src/components/Layouts/RightSide/RightSide.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0.6rem;
+  padding-top: 1.5rem;
   background-color: rgb(62, 60, 101);
   width: 100%;
   display: flex;
@@ -38,17 +39,16 @@
   width: 100%;
   align-items: center;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.1rem;
 }
 .summary-name {
   font-size: 1.7rem;
 }
 .summary-temp {
   font-size: 3.8rem;
-  margin: -0.5rem 0;
-  margin-right: -0.8rem;
   font-weight: 200;
 }
+
 .summary-weather {
   font-weight: 500;
 }
@@ -63,9 +63,10 @@
 .hero-hourly {
   grid-area: hourly;
   width: 100%;
-  height: 9rem;
+  height: 9.5rem;
 }
 .hero-top-underline {
+  font-size: 1.2rem;
   display: flex;
   gap: 0.4rem;
   padding-bottom: 0.4rem;
@@ -87,41 +88,41 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.4rem 0.6rem;
-  gap: 0.2rem;
+  padding: 0.4rem 1.08rem;
+  padding-left: 0;
+  gap: 0.1rem;
   font-size: 0.9rem;
 }
 .hero-hourly-single-hour span {
-  font-weight: 600;
+  font-weight: 500;
 }
 .singlehour-hour {
   font-size: 0.7rem;
 }
 .hero-tenday {
   grid-area: tenday;
-  height: 30rem;
+  height: 30.2rem;
 }
 
 .hero-daily-detail {
   display: flex;
   flex-direction: column;
-  gap: 0.1rem;
   font-size: 0.95rem;
 }
 .hero-daily-single-day {
   margin: 0;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
-  padding-bottom: 0.1rem;
+  padding-bottom: 0.05rem;
   border-bottom: 0.01rem rgba(131, 131, 131, 0.772) solid;
 }
 .hero-daily-single-day div {
-  /* flex-grow: 0; */
-  flex-basis: 25%;
+  flex-grow: 0;
+  flex-basis: 33.33%;
 }
 .dailyweather-minmax {
-  gap: 0.3rem;
+  gap: 0.2rem;
   display: flex;
   align-items: center;
   flex-basis: 50%;
@@ -316,13 +317,14 @@
   flex-direction: column;
   justify-content: space-between;
   height: 80%;
+  padding-bottom: 0.5rem;
 }
 .detailBox-main {
-  font-size: 1.5rem;
-  font-weight: 500;
+  font-size: 1.25rem;
+  font-weight: 400;
 }
 .detailBox-sub {
-  font-weight: 500;
+  font-weight: 300;
   font-size: 0.8rem;
 }
 .weathericonimg {
@@ -333,16 +335,18 @@
   align-items: center;
   gap: 0.2rem;
   text-decoration: none;
-  color: rgb(21, 165, 255);
+  color: inherit;
 }
 .link:hover {
-  color: rgb(19, 122, 186);
+  color: rgb(21, 132, 200);
 }
 .aboutme {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-  font-size: 1.1rem;
+  justify-content: space-between;
+  padding-bottom: 2rem;
+  gap: 0.2rem;
+  font-size: 1rem;
 }
 .usericon {
   width: 100%;
